--- a/Assets/index.css
+++ b/Assets/index.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #87ceeb, #fff);
+    background: linear-gradient(to bottom, #0e4bcf, #73799b);
     height: 100vh;
     display: flex;
     align-items: center;
